test/Parser/Var/InheritOnLocalVariable.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

export int function() {
	// CHECK: .loci:6:2: error: unexpected 'inherit' keyword
	inherit int i = 10;
	return i;
}

// CHECK: 1 error generated.
